use twig comments

--- a/src/templates/steps-links-view.html
+++ b/src/templates/steps-links-view.html
@@ -120,11 +120,12 @@
       {% endfor %}
     </div>
 
-    <!-- TODO FIXME
+    {# TODO FIXME
     <div class='ml-3 mt-3'>
       <i class='fas fa-list mr-1 fa-fw'></i>
-      <a href='experiments.php?mode=show&related={{ Entity.id }}'>{{ 'Show related experiments'|trans }}</a>
-    </div-->
+      <a href='experiments.php?mode=show&amp;related={{ Entity.id }}'>{{ 'Show related experiments'|trans }}</a>
+    </div
+    #}
     <hr>
   {% endif %}
 
@@ -156,11 +157,12 @@
       {% endfor %}
     </div>
 
-    <!-- TODO FIXME
+    {# TODO FIXME
     <div class='ml-3 mt-3'>
       <i class='fas fa-list mr-1 fa-fw'></i>
-      <a href='database.php?mode=show&related={{ Entity.id }}'>{{ 'Show related items'|trans }}</a>
-    </div-->
+      <a href='database.php?mode=show&amp;related={{ Entity.id }}'>{{ 'Show related items'|trans }}</a>
+    </div
+    #}
     <hr>
   {% endif %}
 
