--- a/src/templates/uploads.html
+++ b/src/templates/uploads.html
@@ -90,7 +90,7 @@
               <td>{{ upload.filesize|formatBytes }}</td>
               {# ACTIONS #}
               <td>
-                <a href='app/download.php?f={{ upload.long_name }}&amp;name={{ upload.real_name }}&amp;storage={{ upload.storage }}' rel='noopener' title='{{ 'Download'|trans }}' aria-label='{{ 'Download'|trans }}' class='btn hl-hover-gray p-1 mr-1'>
+                <a href='app/download.php?f={{ upload.long_name|escape('url') }}&amp;name={{ upload.real_name|escape('url') }}&amp;storage={{ upload.storage }}' rel='noopener' title='{{ 'Download'|trans }}' aria-label='{{ 'Download'|trans }}' class='btn hl-hover-gray p-1 mr-1'>
                   <i class='fas fa-download fa-fw'></i>
                 </a>
                 {% if not upload.immutable %}
@@ -138,7 +138,7 @@
               {# don't make the thumbnail clickable if it's a tif #}
               {% if ext matches '/(jpg|jpeg|png|gif|pdf|eps|svg|heic)$/i' %}
                 <div class='text-center'>
-                  <a class='text-break' href='app/download.php?f={{ upload.long_name }}&amp;storage={{ upload.storage }}&amp;name={{ upload.real_name }}'
+                  <a class='text-break' href='app/download.php?f={{ upload.long_name|escape('url') }}&amp;storage={{ upload.storage }}&amp;name={{ upload.real_name|escape('url') }}'
                     {% if upload.real_name matches '/(jpg|jpeg|png|gif)$/i' %}data-fancybox='group' data-caption='{{ upload.real_name|escape('html_attr') }}'{% endif %}
                     {% if upload.comment %}title='{{ upload.comment }}' data-caption='{{ upload.comment|escape('html_attr') }}'{% endif %}
                   >
@@ -147,7 +147,7 @@
               {# old timestamp pdf don't have a thumbnail, so don't try to display one for them #}
               {% if ext matches '/(jpg|jpeg|png|gif|tif|tiff|pdf|eps|svg|heic)$/i' %}
                 <div class='text-center'>
-                  <img class='thumb img-thumbnail rounded' class='text-break' src='app/download.php?f={{ thumb_name }}&amp;storage={{ upload.storage }}&amp;name={{ upload.real_name }}' alt='thumbnail' />
+                  <img class='thumb img-thumbnail rounded' class='text-break' src='app/download.php?f={{ thumb_name|escape('url') }}&amp;storage={{ upload.storage }}&amp;name={{ upload.real_name|escape('url') }}' alt='thumbnail' />
                 </div>
               {% else %}
                 <i class='fas {{ ext2icon(ext) }} thumb rounded mx-auto d-block text-center'></i>
@@ -160,7 +160,7 @@
             {# MOLFILES #}
             {% elseif ext == 'mol' %}
               <div class='text-center'>
-                <canvas class='molFile' id='molFile_{{ upload.id }}' data-molpath='app/download.php?f={{ upload.long_name }}&amp;storage={{ upload.storage }}&amp;name={{ upload.real_name }}'></canvas>
+                <canvas class='molFile' id='molFile_{{ upload.id }}' data-molpath='app/download.php?f={{ upload.long_name|escape('url') }}&amp;storage={{ upload.storage }}&amp;name={{ upload.real_name|escape('url') }}'></canvas>
               </div>
 
             {# MOLECULES #}
@@ -196,7 +196,7 @@
 
               {# IMPORTANT: here the data-href has the storage first and the filename last or 3Dmol will get confused with the format #}
               <div class='viewer_3Dmoljs'
-                data-href='app/download.php?storage={{ upload.storage }}&amp;f={{ upload.long_name }}&amp;name={{ upload.real_name }}'
+                data-href='app/download.php?storage={{ upload.storage }}&amp;f={{ upload.long_name|escape('url') }}&amp;name={{ upload.real_name|escape('url') }}'
                 data-style="{{ ext == 'pdb' ? 'cartoon:color=spectrum' : 'stick' }}"
                 data-backgroundcolor='0xffffff'
                 id='3Dmol_{{ upload.id }}'>
@@ -205,7 +205,7 @@
             {# DNA #}
             {% elseif ext in constant('Elabftw\\Elabftw\\Extensions::DNA') %}
               <div class='viewer-ove'
-                data-href='app/download.php?f={{ upload.long_name }}&amp;storage={{ upload.storage }}&amp;name={{ upload.real_name }}'
+                data-href='app/download.php?f={{ upload.long_name|escape('url') }}&amp;storage={{ upload.storage }}&amp;name={{ upload.real_name|escape('url') }}'
                 data-real-name='{{ upload.real_name|escape('html_attr') }}'
                 id='OVE_{{ upload.id }}'>
               </div>
@@ -223,7 +223,7 @@
             {% elseif ext matches '/(mp4|webm)$/i' %}
               <div class='text-center'>
                 <video controls width='300' preload='metadata'>
-                  <source src='app/download.php?f={{ upload.long_name }}&storage={{ upload.storage }}&name={{ upload.real_name }}' type='video/{{ ext }}'>
+                  <source src='app/download.php?f={{ upload.long_name|escape('url') }}&amp;storage={{ upload.storage }}&amp;name={{ upload.real_name|escape('url') }}' type='video/{{ ext }}'>
                 </video>
               </div>
 
@@ -235,7 +235,7 @@
             <div class='caption'>
               <i class='fas fa-fw fa-download mr-1'></i>
               <p class='d-inline'>
-                <a id='upload-filename_{{ upload.id }}' class='text-break' href='app/download.php?f={{ upload.long_name }}&amp;name={{ upload.real_name }}&amp;storage={{ upload.storage }}' rel='noopener'>{{ upload.real_name }}</a>
+                <a id='upload-filename_{{ upload.id }}' class='text-break' href='app/download.php?f={{ upload.long_name|escape('url') }}&amp;name={{ upload.real_name|escape('url') }}&amp;storage={{ upload.storage }}' rel='noopener'>{{ upload.real_name }}</a>
                 <span class='smallgray' style='display:inline'>
                   {% if upload.filesize %}
                     {{ upload.filesize|formatBytes }} -
