make suggested tags closed by default

--- a/src/templates/edit-tags.html
+++ b/src/templates/edit-tags.html
@@ -12,7 +12,7 @@
   </div>
 </div>
 <div class='d-none d-sm-block mb-2 align-items-center mathjax-ignore'>
-  <details open>
+  <details closed>
     <summary class='col-form-label mr-3 edit-mode-label'>{{ 'Suggested tags'|trans }}</summary>
     <div id='tags_div_suggestedtags_{{ Entity.id }}' class='mr-2 d-flex flex-wrap'>
       {% set filteredTags = [] %}
