remove aria-hidden='true' from modals

--- a/src/templates/booking-params-modal.html
+++ b/src/templates/booking-params-modal.html
@@ -1,5 +1,5 @@
 {# Modal for booking parameters #}
-<div class='modal fade' id='bookingParamsModal' tabindex='-1' role='dialog' aria-labelledby='bookingParamsModalLabel' aria-hidden='true'>
+<div class='modal fade' id='bookingParamsModal' tabindex='-1' role='dialog' aria-labelledby='bookingParamsModalLabel'>
   <div class='modal-dialog modal-lg' role='document'>
     <div class='modal-content'>
       <div class='modal-header'>
