--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -66,7 +66,7 @@
 {% endif %}
 
 {# Modal for policies #}
-<div class='modal fade' id='policiesModal' tabindex='-1' role='dialog' aria-labelledby='policiesModalLabel' aria-hidden='true'>
+<div class='modal fade' id='policiesModal' tabindex='-1' role='dialog' aria-labelledby='policiesModalLabel'>
   <div class='modal-dialog modal-xl' role='document'>
     <div class='modal-content'>
       <div class='modal-header'>
