--- a/src/templates/sysconfig.html
+++ b/src/templates/sysconfig.html
@@ -5,7 +5,7 @@
 {% include('create-idp-modal.html') %}
 
 {# Modal for team creation #}
-<div class='modal fade' id='createTeamModal' tabindex='-1' role='dialog' aria-labelledby='createTeamModalLabel' aria-hidden='true'>
+<div class='modal fade' id='createTeamModal' tabindex='-1' role='dialog' aria-labelledby='createTeamModalLabel'>
   <div class='modal-dialog' role='document'>
     <div class='modal-content'>
       <div class='modal-header'>
