--- a/src/templates/create-idp-modal.html
+++ b/src/templates/create-idp-modal.html
@@ -1,5 +1,5 @@
 {# Modal for IDP creation #}
-<div class='modal fade' id='createIdpModal' tabindex='-1' role='dialog' aria-labelledby='createidpModalLabel' aria-hidden='true'>
+<div class='modal fade' id='createIdpModal' tabindex='-1' role='dialog' aria-labelledby='createidpModalLabel'>
   <div class='modal-dialog modal-xl' role='document'>
     <div class='modal-content'>
       <div class='modal-header'>
