--- a/src/templates/editusers.html
+++ b/src/templates/editusers.html
@@ -1,7 +1,7 @@
 <h3 class='p-2 pl-3 section-title'>{{ 'Search users'|trans }}</h3>
 <div class='pl-3'>
   <div class='form-group'>
-    <form method='get' id ='userSearchForm'>
+    <form method='get' id='userSearchForm' aria-label='{{ 'Search'|trans }}'>
       {# stay on correct tab #}
       <input type='hidden' value='3' name='tab' />
 
@@ -56,7 +56,7 @@
         {% for user in usersArr %}
           {% include('archive-user-modal.html') %}
           {# Modal for managing users to teams, generated for each user #}
-          <div class='modal fade' id='manageUsers2teamsModal_{{ user.userid }}' tabindex='-1' role='dialog' aria-labelledby='manageTeamsForUser' aria-hidden='true'>
+          <div class='modal fade' id='manageUsers2teamsModal_{{ user.userid }}' tabindex='-1' role='dialog' aria-labelledby='manageTeamsForUser'>
             <div class='modal-dialog modal-xl' role='document'>
               <div class='modal-content'>
                 <div class='modal-header'>
