--- a/src/templates/field-builder-modal.html
+++ b/src/templates/field-builder-modal.html
@@ -1,5 +1,5 @@
 {# Modal for field builder #}
-<div class='modal fade' id='fieldBuilderModal' tabindex='-1' role='dialog' aria-labelledby='fieldBuilderLabel' aria-hidden='true'>
+<div class='modal fade' id='fieldBuilderModal' tabindex='-1' role='dialog' aria-labelledby='fieldBuilderLabel'>
   <div class='modal-dialog' role='document'>
     <div class='modal-content'>
       {% if App.Config.configArr.debug -%}
@@ -147,7 +147,7 @@
   </div>
 </div>
 {# Modal for field loader #}
-<div class='modal fade' id='fieldLoaderModal' tabindex='-1' role='dialog' aria-labelledby='fieldLoaderLabel' aria-hidden='true'>
+<div class='modal fade' id='fieldLoaderModal' tabindex='-1' role='dialog' aria-labelledby='fieldLoaderLabel'>
   <div class='modal-dialog modal-lg' role='document'>
     <div class='modal-content new-field-form'>
       <div class='modal-header'>
