--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -6,7 +6,7 @@
 </a>
 
 {# Modal for privacy policy #}
-<div class='modal fade' id='policyModal' tabindex='-1' role='dialog' aria-labelledby='policyModalLabel' aria-hidden='true'>
+<div class='modal fade' id='policyModal' tabindex='-1' role='dialog' aria-labelledby='policyModalLabel'>
   <div class='modal-dialog modal-lg' role='document'>
     <div class='modal-content'>
       <div class='modal-header'>
