--- a/src/templates/show-view-edit.html
+++ b/src/templates/show-view-edit.html
@@ -1,7 +1,7 @@
 {% include 'create-new-item-modal.html' with {'entityType': 'experiments'} %}
 {% include 'create-new-item-modal.html' with {'entityType': 'items'} %}
 {# Modal for import #}
-<div class='modal fade' id='importModal' tabindex='-1' role='dialog' aria-labelledby='importModalLabel' aria-hidden='true'>
+<div class='modal fade' id='importModal' tabindex='-1' role='dialog' aria-labelledby='importModalLabel'>
   <div class='modal-dialog' role='document'>
     <div class='modal-content'>
       <div class='modal-header'>
