--- a/src/templates/editusers.html
+++ b/src/templates/editusers.html
@@ -1,7 +1,7 @@
 <h3 class='p-2 pl-3 section-title'>{{ 'Search users'|trans }}</h3>
 <div class='pl-3'>
   <div class='form-group'>
-    <form method='get' id='userSearchForm' aria-label='{{ 'Search'|trans }}'>
+    <form method='get' id='userSearchForm' aria-label='{{ 'Search users'|trans }}'>
       {# stay on correct tab #}
       <input type='hidden' value='3' name='tab' />
 
