--- a/src/templates/head.html
+++ b/src/templates/head.html
@@ -78,7 +78,7 @@
         {% if App.Config.configArr.debug -%}
           <!-- [html-validate-disable-next wcag/h32: no submit button for navbar search field] -->
         {%- endif %}
-        <form aria-label='{{ 'Search'|trans }}' class='nav-item form-inline ml-auto' method='get' action='{{ actionPage }}'>
+        <form aria-label='{{ 'Quicksearch'|trans }}' class='nav-item form-inline ml-auto' method='get' action='{{ actionPage }}'>
           {# the id is for making it easy to find the element when focusing it with the keyboard shortcut #}
           <input id='quicksearchInput' class='form-control big-search' type='search' name='q' aria-label='{{ 'Search'|trans }}' size='20' value='{{ App.Request.query.get('q') }}' />
         </form>
