--- a/src/templates/team.html
+++ b/src/templates/team.html
@@ -36,14 +36,14 @@
 
         {# BIND EXPERIMENT #}
         <div class='mt-2'>
-          <i class='fas fa-link mr-1'></i><h5 class='d-inline'>{{ 'Bind an experiment'|trans }}</h5>
+          <i class='fas fa-link mr-1'></i><h5 class='d-inline' id='bindExpInputLabel'>{{ 'Bind an experiment'|trans }}</h5>
           <div id='eventBoundExp'></div>
-          <button data-action='scheduler-rm-bind' data-type='experiment' data-eventid='' aria-hidden='true' class='btn btn-sm btn-danger mb-2' type='button'>{{ 'Unbind'|trans }}</button>
+          <button data-action='scheduler-rm-bind' data-type='experiment' data-eventid='' class='btn btn-sm btn-danger mb-2' type='button'>{{ 'Unbind'|trans }}</button>
             <div class='input-group mb-3'>
               <div class='input-group-prepend'>
                 <span class='input-group-text'>{{ 'Search'|trans }}</span>
               </div>
-              <input type='text' data-complete-target='experiments' data-identifier='binddivexp' class='form-control bindInput' />
+              <input type='text' data-complete-target='experiments' data-identifier='binddivexp' class='form-control bindInput' aria-labelledby='bindExpInputLabel' />
               <div class='input-group-append'>
                 <button class='btn btn-primary' data-input='bindexpinput' data-action='scheduler-bind-entity' data-type='experiment' type='button'>{{ 'Attach'|trans }}</button>
               </div>
@@ -52,14 +52,14 @@
         </div>
         {# BIND ITEM #}
         <div class='mt-2'>
-          <i class='fas fa-link mr-1'></i><h5 class='d-inline'>{{ 'Bind a resource'|trans }}</h5>
+          <i class='fas fa-link mr-1'></i><h5 class='d-inline' id='bindItemInputLabel'>{{ 'Bind a resource'|trans }}</h5>
           <div id='eventBoundDb'></div>
-          <button data-action='scheduler-rm-bind' data-type='item_link' data-eventid='' aria-hidden='true' class='btn btn-sm btn-danger mb-2' type='button'>{{ 'Unbind'|trans }}</button>
+          <button data-action='scheduler-rm-bind' data-type='item_link' data-eventid='' class='btn btn-sm btn-danger mb-2' type='button'>{{ 'Unbind'|trans }}</button>
             <div class='input-group mb-3'>
               <div class='input-group-prepend'>
                 <span class='input-group-text'>{{ 'Search'|trans }}</span>
               </div>
-              <input type='text' data-complete-target='items' data-identifier='binddivdb' class='form-control bindInput' />
+              <input type='text' data-complete-target='items' data-identifier='binddivdb' class='form-control bindInput' aria-labelledby='bindItemInputLabel' />
               <div class='input-group-append'>
                 <button class='btn btn-primary' data-input='binddbinput' data-action='scheduler-bind-entity' data-type='item_link' type='button'>{{ 'Attach'|trans }}</button>
               </div>
@@ -71,7 +71,7 @@
         {% if bookableItemData.book_is_cancellable == 1 or App.Users.isAdmin %}
           <div>
             <h5>{{ 'Cancel booking slot'|trans }}</h5>
-            <h6>{{ 'Add a custom message'|trans }}</h6>
+            <h6><label for='cancelEventTextarea'>{{ 'Add a custom message'|trans }}</label></h6>
               <textarea id='cancelEventTextarea' class='form-control'></textarea>
               <label>{{ 'Send to'|trans }}</label>
               <div class='form-check'>
@@ -116,7 +116,7 @@
         {% if App.Config.configArr.debug -%}
           <!-- [html-validate-disable-next wcag/h32: no submit button] -->
         {%- endif %}
-        <form>
+        <form aria-label='{{ 'Filter by category'|trans }}'>
           {% if App.Config.configArr.debug -%}
             <!-- [html-validate-disable-block element-permitted-content: suppress error from select picker: div child of button] -->
           {%- endif %}
@@ -135,7 +135,7 @@
         {% if App.Config.configArr.debug -%}
           <!-- [html-validate-disable-next wcag/h32: no submit button] -->
         {%- endif %}
-        <form>
+        <form aria-label='{{ 'Select a resource'|trans }}'>
           {% if App.Config.configArr.debug -%}
             <!-- [html-validate-disable-block element-permitted-content: suppress error from select picker: div child of button] -->
           {%- endif %}
@@ -213,7 +213,7 @@
 {# TAB 4 EMAIL #}
 <div data-tabcontent='4' hidden>
   <h3 class='p-2 pl-3 mb-3 section-title'><i class='fas fa-envelope'></i> {{ 'Send an email to users'|trans }}</h3>
-  <form class='pl-3' method='post' action='app/controllers/TeamController.php'>
+  <form class='pl-3' method='post' action='app/controllers/TeamController.php' aria-label='{{ 'Mass email form'|trans }}'>
     {{ App.Session.get('csrf')|csrf }}
     <input type='hidden' name='emailUsers' />
     <label>{{ 'Send to'|trans }}</label>
