--- a/src/templates/create-new.html
+++ b/src/templates/create-new.html
@@ -20,9 +20,7 @@
             <h6 class='dropdown-header'>{{ 'No pinned templates found'|trans }}</h6>
           {% endif %}
           <div class='dropdown-divider'></div>
-          <a href='ucp.php?tab=3' class='dropdown-item'><i class='fas fa-layer-group'></i>
-            {{ 'Manage templates'|trans }}
-          </a>
+          <a href='ucp.php?tab=3' class='dropdown-item'><i class='fas fa-layer-group' aria-hidden='true'></i> {{ 'Manage templates'|trans }}</a>
         {% else %}
           {% for category in itemsCategoryArr %}
             <button type='button' data-action='create-entity' data-type='items' data-tplid='{{ category.id }}' class='btn btn-dropdown-item dropdown-item' style='color:#{{ category.color }}'>
