--- a/src/templates/field-builder-modal.html
+++ b/src/templates/field-builder-modal.html
@@ -5,7 +5,7 @@
       {% if App.Config.configArr.debug -%}
         <!-- [html-validate-disable-next wcag/h32: no submit button for navbar search field] -->
       {%- endif %}
-      <form id ='newFieldForm' class='new-field-form'>
+      <form id ='newFieldForm' class='new-field-form' aria-label='new extra field'>
         <div class='modal-header'>
           <h5 class='modal-title' id='fieldBuilderLabel'><i class='fas fa-fw fa-trowel'></i> {{ 'Add an extra field'|trans }}</h5>
           <button type='button' class='close' data-dismiss='modal' aria-label='{{ 'Close'|trans }}'>
