--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -15,7 +15,7 @@
       <div class='modal-body' data-wait='{{ 'Please wait…'|trans }}'>
         <form name='resetPass' method='post' action='app/controllers/ResetPasswordController.php' aria-label='{{ 'Reset password'|trans }}'>
           {{ App.Session.get('csrf')|csrf }}
-          <input class='form-control' placeholder='{{ 'Enter your email address'|trans }}' name='email' type='email' required />
+          <input class='form-control' aria-label='email address' placeholder='{{ 'Enter your email address'|trans }}' name='email' type='email' required />
           <div class='text-center'>
             <button class='btn btn-primary mt-2' type='submit' name='Submit'>{{ 'Send reset link'|trans }}</button>
           </div>
@@ -88,7 +88,7 @@
   {% elseif App.Request.server.get(App.Config.configArr.extauth_remote_user) %}
     <!-- user is already authed with external auth, so just present a continue button
       we don't autologin anymore -->
-      <form method='post' id='login' action='app/controllers/LoginController.php' autocomplete='off' aria-label='{{ 'Continue'|trans }}'>
+      <form method='post' id='login' action='app/controllers/LoginController.php' autocomplete='off' aria-label='autologin form'>
         {{ App.Session.get('csrf')|csrf }}
         <input type='hidden' name='auth_type' value='external'>
         <h2 class='mt-4'>{{ 'You are already authenticated'|trans }}</h2>
@@ -99,7 +99,7 @@
 
     {% if showLocal or App.Config.configArr.ldap_toggle %}
       {# Login form , the id is for an acceptance test #}
-      <form method='post' id='login' action='app/controllers/LoginController.php' autocomplete='off'>
+      <form method='post' id='login' action='app/controllers/LoginController.php' autocomplete='off' aria-label='local or ldap login'>
         {{ App.Session.get('csrf')|csrf }}
         <h1 class='my-4 '>{{ 'Login to your account'|trans }}</h1>
         <div class='col-md-4 mx-auto text-left form-group'>
