--- a/src/templates/ownership-transfer-modal.html
+++ b/src/templates/ownership-transfer-modal.html
@@ -1,5 +1,5 @@
 {# Modal for ownership transfer #}
-<div class='modal fade' id='ownerModal' tabindex='-1' role='dialog' aria-labelledby='ownerModalLabel' aria-hidden='true'>
+<div class='modal fade' id='ownerModal' tabindex='-1' role='dialog' aria-labelledby='ownerModalLabel'>
   <div class='modal-dialog' role='document'>
     <div class='modal-content'>
       <div class='modal-header'>
