--- a/src/templates/create-statuslike-modal.html
+++ b/src/templates/create-statuslike-modal.html
@@ -1,5 +1,5 @@
 {# create a status or experiments category #}
-<div class='modal fade' id='create{{ target }}Modal' tabindex='-1' role='dialog' aria-labelledby='create{{ target }}ModalLabel' aria-hidden='true'>
+<div class='modal fade' id='create{{ target }}Modal' tabindex='-1' role='dialog' aria-labelledby='create{{ target }}ModalLabel'>
   <div class='modal-dialog' role='document'>
     <div class='modal-content'>
       <div class='modal-header'>
