--- a/src/templates/steps-links-edit.html
+++ b/src/templates/steps-links-edit.html
@@ -1,6 +1,6 @@
 <div class='row mt-4'>
   {# STEPS #}
-  <section class='col-md-12'>
+  <div class='col-md-12'>
     <h4 data-action='toggle-next' class='d-inline togglable-section-title' tabindex='0' role='button' aria-expanded='true' aria-controls='stepsDiv'><i class='fas fa-caret-down mr-2 fa-fw'></i> {{ 'Steps'|trans }}</h4>
     {# ADD STEP #}
     <div id='stepsDiv' class='mt-2' data-save-hidden='stepsDiv'>
@@ -89,13 +89,13 @@
       </div>
     </div>
     <hr>
-  </section>
+  </div>
 
 
   {# LINKS #}
   {% if Entity.type == 'items' or Entity.type == 'experiments' %}
     {# EXPERIMENTS LINKS #}
-    <section class='col-md-12'>
+    <div class='col-md-12'>
       <h4 data-action='toggle-next' class='d-inline togglable-section-title' tabindex='0' role='button' aria-expanded='true' aria-controls='linksExpDiv'><i class='fas fa-caret-down mr-2 fa-fw'></i>{% trans %}
       Linked experiment
       {% plural 2 %}
@@ -151,12 +151,12 @@
         </div>
       </div>
       <hr>
-    </section>
+    </div>
 
   {% endif %}
 
   {# ITEMS LINKS #}
-  <section class='col-md-12'>
+  <div class='col-md-12'>
     <h4 data-action='toggle-next' class='d-inline togglable-section-title' tabindex='0' role='button' aria-expanded='true' aria-controls='linksDiv'><i class='fas fa-caret-down mr-2 fa-fw'></i> {{ 'Linked resources'|trans }}</h4>
     {# DISPLAY ITEMS LINKS #}
     <div class='mt-2' data-save-hidden='linksDiv' id='linksDiv'>
@@ -208,6 +208,6 @@
       </div>
     </div>
     <hr>
-  </section>
+  </div>
 </div>
 
