Fix recently introduced issue with uploads (#4843)
Uploading a .pdb file or any file recognized by 3Dmol would consume all memory and crash the tab.

* make suggested tags closed by default
* improve 3dmol related code by using a data-action
* use data-dismiss on timestamp modal instead of calling the close action manually
* this removes the need for `display3dmolecules()`
* bring back Image menu and button in edit mode. see #4842
* fix html validation issues

--- a/src/templates/search.html
+++ b/src/templates/search.html
@@ -4,7 +4,7 @@
 {% endblock %}
 
 {# Modal for advanced search #}
-<div class='modal fade' id='advancedSearchModal' tabindex='-1' role='dialog' aria-labelledby='advancedSearchModalLabel' aria-hidden='true'>
+<div class='modal fade' id='advancedSearchModal' tabindex='-1' role='dialog' aria-labelledby='advancedSearchModalLabel'>
   <div class='modal-dialog modal-xl' role='document'>
     <div class='modal-content'>
       <div class='modal-header'>
@@ -200,7 +200,7 @@
 
 {# SEARCH PAGE BEGIN #}
 <hr>
-<form method='get' action='search.php'>
+<form method='get' action='search.php' aria-label='Main search form'>
 {# MAIN TEXTAREA FOR EXTENDED QUERY #}
 <div class='row'>
   <div class='col-md-12 mb-2'>
