--- a/src/templates/field-builder-modal.html
+++ b/src/templates/field-builder-modal.html
@@ -1,11 +1,11 @@
 {# Modal for field builder #}
-<div class='modal fade' id='fieldBuilderModal' tabindex='-1' role='dialog' aria-labelledby='fieldBuilderLabel' aria-hidden='true'>
+<div class='modal fade' id='fieldBuilderModal' tabindex='-1' role='dialog' aria-labelledby='fieldBuilderLabel'>
   <div class='modal-dialog' role='document'>
     <div class='modal-content'>
       {% if App.Config.configArr.debug -%}
         <!-- [html-validate-disable-next wcag/h32: no submit button for navbar search field] -->
       {%- endif %}
-      <form id ='newFieldForm' class='new-field-form'>
+      <form id ='newFieldForm' class='new-field-form' aria-label='new extra field'>
         <div class='modal-header'>
           <h5 class='modal-title' id='fieldBuilderLabel'><i class='fas fa-fw fa-trowel'></i> {{ 'Add an extra field'|trans }}</h5>
           <button type='button' class='close' data-dismiss='modal' aria-label='{{ 'Close'|trans }}'>
@@ -147,7 +147,7 @@
   </div>
 </div>
 {# Modal for field loader #}
-<div class='modal fade' id='fieldLoaderModal' tabindex='-1' role='dialog' aria-labelledby='fieldLoaderLabel' aria-hidden='true'>
+<div class='modal fade' id='fieldLoaderModal' tabindex='-1' role='dialog' aria-labelledby='fieldLoaderLabel'>
   <div class='modal-dialog modal-lg' role='document'>
     <div class='modal-content new-field-form'>
       <div class='modal-header'>
