--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block body %}
-<a href='login.php'>
+<a href='login.php' class='p-2 rounded hl-hover-gray'>
   <i class='fas fa-chevron-left'></i> {{ 'go back to login page'|trans }}
 </a>
 
