add emit_audit_logs instance config to emit audit logs as NOTICE in php
error logs.

--- a/src/templates/sysconfig.html
+++ b/src/templates/sysconfig.html
@@ -992,6 +992,11 @@
 </div>
 
 <div data-tabcontent='13' hidden>
+  <h3 class='mb-3 p-2 pl-3 section-title'>{{ 'Audit Logs configuration'|trans }}</h3>
+  <div class='pl-3 mb-5'>
+    {% include 'binary-setting.html' with {'label': 'Emit audit logs with PHP error log'|trans, 'slug': 'emit_audit_logs', 'help': 'Enable to include audit logs events as NOTICE error in PHP logs.'} %}
+  </div>
+
   <h3 class='mb-3 p-2 pl-3 section-title'>{{ 'Audit Logs'|trans }}</h3>
   <div class='pl-3 mb-5'>
     <p id='auditLogsTableLabel'>{{ 'This table lists the most recent events recorded in the application and worth keeping a trace of.'|trans }}</p>
