--- a/src/templates/sysconfig.html
+++ b/src/templates/sysconfig.html
@@ -118,6 +118,12 @@
     </div>
     <hr>
 
+    <div class='d-flex justify-content-between'>
+      <label for='chat_url' class='col-form-label'>{{ 'URL where the Chat room menu entry from Help dropdown points'|trans }}</label>
+      <input class='form-control col-md-3' type='url' value='{{ App.Config.configArr.chat_url }}' data-trigger='blur' data-model='config' data-target='chat_url' id='chat_url' />
+    </div>
+    <hr>
+
   </div>
 
   <h3 class='mb-3 p-2 pl-3 section-title'>{{ 'Registration and authentication configuration'|trans }}</h3>
