try twig default escape on href url in pdf

--- a/src/templates/pdf.html
+++ b/src/templates/pdf.html
@@ -142,7 +142,7 @@
         {% if locked %}
           <p class='elabid'>Locked by {{ lockerName }} on {{ lockDate }}</p>
         {% endif %}
-        <p class='elabid'>Link: <a href='{{ url|raw }}'>{{ url }}</a></p>
+        <p class='elabid'>Link: <a href='{{ url }}'>{{ url }}</a></p>
       </td>
     </tr>
   </table>
