mail_from is type email input

--- a/src/templates/sysconfig.html
+++ b/src/templates/sysconfig.html
@@ -360,7 +360,7 @@
 
     <div class='d-flex justify-content-between'>
       <label for='mail_from' class='col-form-label'>{{ 'Sender address'|trans }}</label>
-      <input class='form-control col-md-3' type='text' value='{{ App.Config.configArr.mail_from }}' data-trigger='blur' data-model='config' data-target='mail_from' id='mail_from' />
+      <input class='form-control col-md-3' type='email' value='{{ App.Config.configArr.mail_from }}' data-trigger='blur' data-model='config' data-target='mail_from' id='mail_from' />
     </div>
     <hr>
 
